Added Lovesey ref.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@86 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -350,3 +350,10 @@
    year      = {1989},
    volume    = {284}
 }
+
+@book{lovesey84,
+  author    = {S.W. Lovesey},
+   title     = {Theory of neutron scattering from condensed matter},
+   year      = {1984},
+   publisher = {Oxford Clarendon Press}
+}
