--- a/trunk/monochromator.tex
+++ b/trunk/monochromator.tex
@@ -6,7 +6,7 @@ In this class of components, we are concerned with elastic Bragg
 scattering from monochromators. {\bf Monochromator\_flat} 
 models a flat thin mosaic crystal with a single scattering vector
 perpendicular to the surface.  
-The component {\bf Monochromator\_curved} is similar, 
+The component {\bf Monochromator\_curved} is physically similar, 
 but models a singly or doubly bend monochromator crystal arrangement.
 
 A much more general model of scattering from a single crystal is 
