--- a/trunk/res_monitor.tex
+++ b/trunk/res_monitor.tex
@@ -1,5 +1,3 @@
-% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
-
 \section{Res\_monitor: The monitor for resolution calculation}
 \label{s:res_monitor}
 \index{Monitors!Resolution monitor|see{Samples/Resolution function}}
@@ -12,7 +10,7 @@ shape, size, and position as {\bf Res\_monitor}.
 The shape of {\rm Res\_monitor} is by default rectangular,
 but can be a box, a sphere, a disk, or a cylinder,
 depending on the parameter ``options''.
-The component works like a normal single detector, but
+The component works like a normal monitor, but
 also records all scattering events and stores
 them to a file that can later be read by 
 the \MCS\ frontend tool \verb+mcresplot+.
@@ -44,9 +42,10 @@ the following columns:
 \item $p_{\rm f}$, the relative neutron weight adjustment from sample to
   detector (so the total weight in the detector is $p_{\rm i}p_{\rm f}$).
 \end{enumerate}
-From ${\bf k}_{\rm i}$ and ${\bf k}_{\rm f}$, we may compute ${\bf Q} =
-{\bf k}_{\rm i} - {\bf k}_{\rm f}$ and $\omega 
-= \hbar^2/(2 m_{\rm n})({\bf k}_{\rm i}^2 - {\bf k}_{\rm f}^2)$.
+From ${\bf k}_{\rm i}$ and ${\bf k}_{\rm f}$, we may compute 
+the scattering parameters 
+${\bf Q} = {\bf k}_{\rm i} - {\bf k}_{\rm f}$ and 
+$\hbar \omega = \hbar^2/(2 m_{\rm n})({\bf k}_{\rm i}^2 - {\bf k}_{\rm f}^2)$.
 The vectors are given in the local coordinate system of the resolution
 sample component. The wave vectors are in units of $\mbox{\AA}^{-1}$, the
 energy transfer in meV.
