--- a/trunk/samples.tex
+++ b/trunk/samples.tex
@@ -1,5 +1,6 @@
 \chapter{Samples}
 \index{Library!Components!samples}
+\label{c:samples}
 
 This class of components models the sample of the experiment.
 This is by far the most challenging part of a neutron scattering
@@ -85,4 +86,3 @@ of the samples.
 \input{phonon.tex}           \newpage
 %\input{LSCO.tex}            \newpage
 \input{isotropic_sqw.tex}    
-
