--- a/trunk/tof_res_sample.tex
+++ b/trunk/tof_res_sample.tex
@@ -14,10 +14,10 @@ energy so that neutron arrival time at the TOF detector lies within one time bin
 specified by $t_0$ and $\Delta t$.
 For actual calculations of the resolution
 function, {\bf TOF\_Res\_sample} should be used
-together with the \textbf{Res\_monitor} component, described in
+together with \textbf{Res\_monitor}, described in
 section~\ref{s:res_monitor}.
 
-The shape of {\rm TOF\_Res\_sample} is either a hollow cylinder
+The shape of {\bf TOF\_Res\_sample} is either a hollow cylinder
 or a rectangular box. 
 The hollow cylinder shape is
 specified with the inner and outer radius, $r_{\rm i}$ and $r_{\rm o}$,
