--- a/trunk/monochromator_curved.tex
+++ b/trunk/monochromator_curved.tex
@@ -1,6 +1,4 @@
-% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
-
-\section{Monochromator\_curved: An infinitely thin, curved mosaic crystal with
+\section{Monochromator\_curved: A curved mosaic crystal with
 a single scattering vector}
 \label{s:monochromator_curved}
 \index{Optics!Monochromator, curved}
@@ -20,12 +18,12 @@ This component simulates an array of infinitely thin single
 crystals with a single scattering vector perpendicular to the
 surface and a mosaic spread.
 This component is used to simulate a singly or doubly
-curved monochromator or analyzer, in reflecting geometry.
+curved monochromator or analyzer in reflecting geometry.
 
-The component uses  rectangular pieces of monochromator material
+The component uses rectangular pieces of monochromator material
 as described in {\bf Monochromator\_curved}.
 The scattering vector is named $Q$, and as described in
-{\bf Monochromator\_flat}, multiples of $Q$ can be applied.
+{\bf Monochromator\_flat}, multiples of $Q$ will be applied.
 Other important parameters are the piece height and width,
 $y_{\rm h}$ and $z_{\rm w}$, respectively, the
 horizontal and vertical mosaicities, $\eta_{\rm h}$ and $\eta_{\rm v}$,
@@ -40,7 +38,7 @@ but tilted accordingly to the curvature radius.
 
 The constant monochromator reflectivity, $R_0$ can be replaced by
 a file of tabulated reflectivities. In the same sense, the transmission
-can be modeled by a tabulated file (for non reflected neutrons).
+can be modeled by a tabulated file (for non-reflected neutrons).
 
 As for {\bf Monochromator\_flat}, the crystal is assumed to be infinitely
 thin, and the varition in lattice spacing, ($\Delta d/d$),
@@ -48,5 +46,5 @@ is assumed to be zero. Hence, this
 component is not suitable for simulating backscattering instruments or to
 investigate multiple scattering effects.
 
-The algorithm for scattering and calculation of the neutron weight for
+The theory and algorithm for scattering from
 the individual blades is described under {\bf Monochromator\_flat}.
