--- a/trunk/monochromator_flat.tex
+++ b/trunk/monochromator_flat.tex
@@ -1,18 +1,27 @@
-% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
-
 \section{Monochromator\_flat: An infinitely thin, flat mosaic crystal with
 a single scattering vector}
 \label{s:monochromator_flat}
 \index{Optics!Monochromator}
 
-\component{Monochromator\_flat}{System}{$z_{\rm min}$, $z_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $\eta_{\rm h}$, $\eta_{\rm v}$, $r_0$, $Q_0$}{$d_{\rm m}$}{}
+\component{Monochromator\_flat}{System}{$z_{\rm min}$, $z_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $\eta_{\rm h}$, $\eta_{\rm v}$, $R_0$, $Q_0$}{$d_{\rm m}$}{}
 
 This component simulates an infinitely thin single
 crystal with a single scattering vector, $Q_0=2\pi / d_m$, perpendicular to the
 surface. A typical
 use for this component is to simulate a simple monochromator or analyzer.
 
-The physical model used in the component is a rectangular piece of
+The monochromator dimensions are given by the length, $z_{\rm w}$, and
+the height, $y_{\rm h}$. As the parameter names indicate, the
+monochromator is placed in the $z-y$ plane of the local coordinate system. 
+This definition is made to ensure that the physical monochromator angle 
+(often denoted \verb+A1+) will equal the \MCS\ rotation angle 
+of the Monochromator component around the $y$-axis.
+$R_0$ is the maximal reflectivity and
+$\eta_{\rm h}$ and $\eta_{\rm v}$ are the horizontal and vertical mosaicities, 
+respectively, see explanation below.
+
+\subsection{Monochromator physics and algorithm}
+The physical model used in {\bf Monochromator\_flat} is a rectangular piece of
 material composed of a large number of small micro-crystals.
 The orientation of the
 micro-crystals deviates from the nominal crystal orientation so that the
@@ -22,15 +31,10 @@ width of the Gaussian is given by the mosaic spread, $\eta$, of the crystal
 (given in units of arc minutes).
 $\eta$ is assumed to be large compared to the inherent Bragg width of the
 scattering vector (often a few arc seconds).
-The horizontal and vertical mosaicities, $\eta_{\rm h}$ and $\eta_{\rm v}$,
-respectively, are allowed to be different.
-
-The monochromator dimensions are given by the length, $z_{\rm w}$, and
-the height, $y_{\rm h}$. As the parameter names indicate, the
-monochromator is placed in the $z-y$ plane of the local coordinate system. 
-This definition is made to ensure that the physical monochromator angle 
-(often denoted \verb+A1+) will equal the \MCS\ rotation angle 
-of the Monochromator component around the $y$-axis.
+(The mosaicity gives rise to a Gaussian reflectivity profile of width
+similar to - but not equal - the intrinsic mosaicity. 
+In this component, and in real life, the mosaicity given is that of the 
+reflectivity signal.)
 
 As a further simplification, the crystal is assumed to be infinitely
 thin. This means that multiple scattering effects are not simulated. It
@@ -48,14 +52,17 @@ computation is to determine the probability of scattering. This
 probability is then used in a Monte Carlo choice deciding whether to
 scatter or transmit the neutron. The physical scattering probability is the sum
 of the probabilities of first- second-, and higher-order scattering -
-up tp the highest order possible for the given neutron wavelength. 
+up to the highest order possible for the given neutron wavelength. 
 However, in most cases at most one order will have a
 significant scattering probability, and the computation thus considers
-only the order that best matches the neutron wavelength. Bragg's law is
+only the order that best matches the neutron wavelength. 
+
+The scattering of neutrons from a crystal is governed by Bragg's law:
 \begin{equation}
 n{\bf Q}_0 = 2{\bf k}_i\sin\theta 
 \end{equation}
-Thus, the scattering order is specified by the integer $n$, which makes
+The scattering order is specified by the integer $n$. We seek only one
+value of $n$, namely the one which makes
 $n {\bf Q}_0$ closest to the projection of $2{\bf k}_i$ onto ${\bf Q}_0$ 
 (see figure~\ref{f:mosaic_order}).
 %  k=2PI/lambda
@@ -81,32 +88,33 @@ $n {\bf Q}_0$ closest to the projection of $2{\bf k}_i$ onto ${\bf Q}_0$
 \label{f:mosaic_order}
 \end{figure}
 %
+
 Once $n$ has been determined, the Bragg angle $\theta$ can be
-computed. The angle $\alpha$ that the nominal scattering vector ${\bf Q}_0$
-makes with the closest scattering vector ${\bf q}$ that admits Bragg
-scattering is then used to compute the probability of reflection from
-the mosaic
+computed. The angle $\alpha$ is the amount one would need to
+turn the nominal scattering vector ${\bf Q}_0$ for the monochromator 
+to be in Bragg scattering condition.
+We now used $\alpha$ to compute the probability of reflection from
+the mosaic crystal
 \begin{equation} 
-p_{\rm reflect} = R_0 e^{-\alpha^2/2\sigma^2},
+p_{\rm reflect} = R_0 e^{-\alpha^2/2\eta^2},
 \end{equation}
-where $R_0$ is the reflectivity at the Bragg angle (see
-figure~\ref{f:mosaic_angle}). The probability $p_{\rm reflect}$ is used
+The probability $p_{\rm reflect}$ is used
 in a Monte Carlo choice to decide whether the neutron is transmitted or
 reflected.
 %
-\begin{figure}
-  \begin{center}
-    \psfrag{th}[r][r]{$\theta$}
-    \psfrag{ki}[r][r]{$2{\bf k}_{\rm i}$}
-    \psfrag{kf}[l][l]{$2{\bf k}_{\rm f}$}
-    \psfrag{Q0}[l][l]{${\bf Q}_0$}
-    \psfrag{alpha}[c][c]{$\alpha$}
-    \psfrag{q}[l][l]{$\bf q$}
-    \includegraphics[width=0.5\textwidth]{figures/mosaic_angle.eps}
-  \end{center}
-\caption{Computing the deviation $d$ from the nominal scattering direction.}
-\label{f:mosaic_angle}
-\end{figure}
+%\begin{figure}
+%  \begin{center}
+%    \psfrag{th}[r][r]{$\theta$}
+%    \psfrag{ki}[r][r]{$2{\bf k}_{\rm i}$}
+%    \psfrag{kf}[l][l]{$2{\bf k}_{\rm f}$}
+%    \psfrag{Q0}[l][l]{${\bf Q}_0$}
+%    \psfrag{alpha}[c][c]{$\alpha$}
+%    \psfrag{q}[l][l]{$\bf q$}
+%    \includegraphics[width=0.5\textwidth]{figures/mosaic_angle.eps}
+%  \end{center}
+%\caption{Computing the deviation $d$ from the nominal scattering direction.}
+%\label{f:mosaic_angle}
+%\end{figure}
 
 In the case of reflection, the neutron will be scattered into the
 Debye-Scherrer cone, with the probability of each point on the cone
@@ -120,17 +128,17 @@ by the equation
 \end{equation}
 where ${\bf b}$ is a vector perpendicular to ${\bf k}_{\rm i}$ and ${\bf
 Q}_0$, ${\bf c}$ is perpendicular to ${\bf k}_{\rm i}$ and ${\bf b}$,
-and both ${\bf b}$ and ${\bf c}$ have the same length as ${\bf k}_{\rm
-  i}$ (see figure~\ref{f:mosaic_cone}). When choosing $\varphi$ (and
+and both ${\bf b}$ and ${\bf c}$ have the same length as ${\bf k}_{\rm i}$ 
+(see figure~\ref{f:mosaic_cone}). When choosing $\varphi$ (and
 thereby ${\bf k}_{\rm f}$), only a small part of the full $[-\pi; \pi]$
 range will have appreciable scattering probability in non-backscattering
 configurations. The best statistics is thus obtained by sampling
 $\varphi$ only from a suitably narrow range.
 
-The (small) deviation angle $\sigma$ of ${\bf q}$ from the nominal
+The (small) deviation angle $\alpha$ of the nominal
 scattering vector $n{\bf Q}_0$ corresponds to a $\Delta q$ of
 \begin{equation} 
-\Delta q \approx \sigma 2k\sin\theta. 
+\Delta q \approx \alpha 2k\sin\theta. 
 \end{equation}
 The angle $\varphi$ corresponds to a $\Delta k_{\rm f}$ (and hence
 $\Delta q$) of
@@ -140,9 +148,9 @@ $\Delta q$) of
 (see figure~\ref{f:mosaic_cone}).
 Hence we may sample $\varphi$ from a Gaussian with standard deviation
 \begin{equation} 
-\sigma\frac{2k\sin\theta}{k\sin(2\theta)} =
-\sigma\frac{2k\sin\theta}{2k\sin\theta\cos\theta} =
-\frac{\sigma}{\cos\theta}
+\alpha\frac{2k\sin\theta}{k\sin(2\theta)} =
+\alpha\frac{2k\sin\theta}{2k\sin\theta\cos\theta} =
+\frac{\alpha}{\cos\theta}
 \end{equation}
 to get good statistics.
 %
@@ -163,10 +171,11 @@ to get good statistics.
 
 What remains is to determine the neutron weight. The distribution from
 which the scattering event is sampled is a Gaussian in $\varphi$ of
-width $\frac{\sigma}{\cos\theta}$,
-$$ f_{\rm MC}(\varphi) = \frac{1}{\sqrt{2\pi}(\sigma/\cos\theta)}
+width $\frac{\alpha}{\cos\theta}$,
+\begin{equation} 
+    f_{\rm MC}(\varphi) = \frac{1}{\sqrt{2\pi}(\sigma/\cos\theta)}
             e^{-\varphi^2/2(\sigma/\cos\theta)^2}
-$$
+\end{equation}
 In the physical model, the probability of the scattering event is
 proportional to a Gaussian in the angle between the nominal scattering
 vector ${\bf Q}_0$ and the actual scattering vector ${\bf q}$. The
@@ -182,7 +191,9 @@ where $d(\varphi)$ denotes the angle between the nominal scattering
 vector and the actual scattering vector corresponding to $\varphi$.
 According to equation~(\ref{probrule}), the weight adjustment $\pi_j$ is
 then given by
-$$ \pi_j = \Pi(\varphi) / f_{\rm MC}(\varphi). $$
+\begin{equation} 
+\pi_j = \Pi(\varphi) / f_{\rm MC}(\varphi).
+\end{equation}
 In the implementation, the integral in~(\ref{eq:mosaic_integral}) is computed
 using a 15-order Gaussian quadrature formula, with the integral
 restricted to an interval of width $5\sigma/\cos\theta$ for the same
