--- a/trunk/virtual_input.tex
+++ b/trunk/virtual_input.tex
@@ -24,5 +24,5 @@ when the input file has been exhausted once.
 
 The simulation ends with either the end of the repeated file counts, 
 or with the normal end with $ncount$ \MCS\ simulation events. We recommand to 
-control the simulation on ´´repeat-count'' by using
+control the simulation on \verb+repeat-count+ by using
 a very large ncount value, e.g. $ncount=1e10$.
