--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -87,7 +87,7 @@
 \include{running}
 \include{kernel}
 %\include{comp} % now in separate Manual
-\include{comp_removed}
+\include{comp_abstract}
 \include{instrum}
 %\include{test}   % now in instrum
 %\include{future} % now in changes
