--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -91,7 +91,7 @@
 \include{samples}
 \include{monitors}
 \include{misc}
-\include{comp_removed}
+%\include{comp_removed}
 %\include{comp_future}
 
 \appendix
