--- a/trunk/moderator.tex
+++ b/trunk/moderator.tex
@@ -2,7 +2,7 @@
 \label{s:moderator}
 \index{Sources!Time of flight pulsed moderator}
 
-\component{Moderator}{System}{$r_s$, $E_0$, $E_1$, $z_f$, $w$, $h$, $\tau_0$, $E_c$, $\gamma$}{}{}
+\component{Moderator}{(System) Mark Hagen, SNS}{$r_s$, $E_0$, $E_1$, $z_f$, $w$, $h$, $\tau_0$, $E_c$, $\gamma$}{}{}
 
 The simple time-of-flight source component {\bf Moderator} resembles
 the source component {\bf Source\_simple} described in \ref{source-simple}.
