Correct typos in reference labels
git-svn-id: https://svn.mccode.org/svn/McStasTeX@89 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -84,7 +84,7 @@
 
 \include{preface_comp}
 %\include{intro_comp}
-%\include{techniq}
+\include{techniq}
 \include{comp}
 \include{sources}
 \include{optics}
