--- a/trunk/Monitor_nD.tex
+++ b/trunk/Monitor_nD.tex
@@ -275,7 +275,7 @@ COMPONENT UserMonitor = Monitor_nD(options="auto user1")
 (...)
 \end{verbatim}
 \end{itemize}
-Setting the user variable values may either make use of the neutron parameters (x,y,z,vx,vy,vz,t,sx,sy,sz,p), access the internal variables of the component that sets the user variables (in this example, those from the \verb+blah+ instance), and access any component OUTPUT parameter \index{Keyword!OUTPUT PARAMETERS} using the \verb+MC_GETPAR+ C macro(see chapter \label{c:kernelcalls}).
+Setting the user variable values may either make use of the neutron parameters (x,y,z,vx,vy,vz,t,sx,sy,sz,p), access the internal variables of the component that sets the user variables (in this example, those from the \verb+blah+ instance), and access any component OUTPUT parameter \index{Keyword!OUTPUT PARAMETERS} using the \verb+MC_GETPAR+ C macro(see chapter \ref{c:kernelcalls}).
 \index{Library!Run-time!MC\_GETPAR}
 
 \index{Monitors!Number of neutron bounces in a guide}
