--- a/trunk/divpos_monitor.tex
+++ b/trunk/divpos_monitor.tex
@@ -1,6 +1,5 @@
-% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
-
 \section{DivPos\_monitor: A divergence and position sensitive monitor}
+\label{s:divpos_monitor}
 \index{Monitors!Divergence/position monitor}
 \component{DivPos\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_x$, $n_{\rm h}$, $\eta_{\rm h,max}$, filename}{}{}
 
