--- a/trunk/tof_res_sample.tex
+++ b/trunk/tof_res_sample.tex
@@ -24,7 +24,7 @@ specified with the inner and outer radius, $r_{\rm i}$ and $r_{\rm o}$,
 respectively, and the height, $h$.
 If these parameters are unspecified,
 the shape is instead a box of dimensions $x_w$, $y_h$, and $z_t$.
-See figure~\ref{f:res_sample}.\par
+%See figure~\ref{f:res_sample}.\par
 
 The component only propagates neutron rays that are scattered; 
 other rays are absorbed. 
