--- a/trunk/e_monitor.tex
+++ b/trunk/e_monitor.tex
@@ -1,4 +1,4 @@
-\section{E\_monitor: The energy-sensitive monitor} \label{s:e-monitor}
+\section{E\_monitor: The energy-sensitive monitor} \label{s:E_monitor}
 \index{Monitors!Energy monitor}
 \component{E\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $E_{\rm min}$, $E_{\rm max}$, filename}{}{}
 The component {\bf E\_monitor} resembles {\bf TOF\_monitor}
